# diffgeom

./: Cargo.toml
src/: conv.rs  lib.rs  proj3.rs  rot2.rs  rot2i.rs  rot3.rs  rot3i.rs  time.rs  trans2.rs  trans2i.rs  trans3.rs  vec2i.rs  vec3i.rs
src/shape/: box2.rs  box2i.rs  mod.rs
